--- a/report/06_svm.tex
+++ b/report/06_svm.tex
@@ -3,8 +3,8 @@
 
 The \ac{SVM} algorithm tries to find the hyperplane which linearly separates the two classes with the highest margin.
 In the simpler implementation, it uses the standard dot product to measure the similarity between two points.
-It is also possibile to use a different function, denominated kernel, as similarity function.
-This allows to tranform the features space and perform a linear separation in the new space.
+It is also possible to use a different function, denominated kernel, as similarity function.
+This allows to transform the features space and perform a linear separation in the new space.
 The result is a non linear separation in the original space. with a shape that depends on the used kernel.
 In this case, we used the popular Gaussian radial basis function kernel.
 
