--- a/report/07_random_forest.tex
+++ b/report/07_random_forest.tex
@@ -1,9 +1,9 @@
 \section{Random Forest}
 \label{sec:random_forest}
 
-Random Forest is an enseble learning method that combines multiple Decision Trees.
-The aim is to reduce the variance of each tree and thus better generealize on new examples.
-A specified number of Decision Trees are learned in a sequence and combined togheter.
+Random Forest is an ensemble learning method that combines multiple Decision Trees.
+The aim is to reduce the variance of each tree and thus better generalized on new examples.
+A specified number of Decision Trees are learned in a sequence and combined together.
 The resulting prediction of the Random Forest is simply the average of the prediction of all trees.
 
 \begin{table}
@@ -34,4 +34,4 @@ The resulting prediction of the Random Forest is simply the average of the predi
 \end{table}
 
 The performances of Random Forest are reported in table \cref{tab:random_forest}.
-It scored on average $0.948$ on each indicator, perfoming slightly worse then \ac{SVM} but much better than Naive Bayes.
+It scored on average $0.948$ on each indicator, performing slightly worse then \ac{SVM} but much better than Naive Bayes.
