--- a/report/08_conclusion.tex
+++ b/report/08_conclusion.tex
@@ -2,9 +2,9 @@
 \label{sec:conclusion}
 
 For this classification problem, \ac{SVM} was the best choice, performing better then Naive Bayes and Random Forest.
-Random Forest scored second, performing only slighly worse than \ac{SVM}.
+Random Forest scored second, performing only slightly worse than \ac{SVM}.
 Naive Bayes performed worst, with a significant difference from both the other two algorithms.
-The performances of the three learning algorithms are summariezed in \cref{tab:summary}.
+The performances of the three learning algorithms are summarized in \cref{tab:summary}.
 
 \begin{table}
 	\centering
