--- a/report/05_naive_bayes.tex
+++ b/report/05_naive_bayes.tex
@@ -1,13 +1,13 @@
 \section{Naive Bayes}
 \label{sec:naive_bayes}
 
-The Naive Bayes classification algorithm tries to model the probabilistic structure of the dataset under the assumption that every feature is indipendent on each other given the class.
+The Naive Bayes classification algorithm tries to model the probabilistic structure of the dataset under the assumption that every feature is independent on each other given the class.
 The predicted class is the one that maximizes the probability of having the given configuration.
 
 For this specific classification problem quite bad.
 In fact, all scores are around $0.75$.
 The details can be found in \cref{tab:naive_bayes}.
-The bad performances are probably due to the presence of redundant and repeated features, which break the conditional indipendence assumption of the algorithm.
+The bad performances are probably due to the presence of redundant and repeated features, which break the conditional Independence assumption of the algorithm.
 
 \begin{table}
 	\centering
